<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@color/colorPrimary"
    android:paddingBottom="20dp"

    android:layout_gravity="center"
    tools:context=".UserSummary">



    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/colorText"
            android:text="X"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/circlebackground"/>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/marketmoni_market" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/textInputEditTextName"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/hint_name"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:textColor="@android:color/white" />-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content1"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textInputLayoutSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content2"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textInputLayoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content3"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content4"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/aboutp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_content5"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
























<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="350dp"-->
    <!--android:layout_height="380dp"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:padding="5dp"-->
    <!--android:layout_gravity="center">-->
    <!--<TextView-->
        <!--android:id="@+id/txtclose"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:textColor="@color/colorText"-->
        <!--android:text="X"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_gravity="end"-->
        <!--android:gravity="center"-->
        <!--android:background="@drawable/circlebackground"/>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<ImageView-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:src="@drawable/acushla"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:contentDescription="@string/profile_picture" />-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/about_name"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="5dp"/>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/about_addr"-->
            <!--android:textColor="@color/white"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="5dp"/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:baselineAligned="false">-->
        <!--<LinearLayout-->
            <!--android:background="@color/orange"-->
            <!--android:gravity="center"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="100dp">-->

            <!--<ImageView-->
                <!--android:layout_width="24dp"-->
                <!--android:layout_height="24dp"-->
                <!--android:src="@drawable/ic_email_black_24dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:contentDescription="@string/email_icon_name" />-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/about_email"-->
                <!--android:textSize="14sp"-->
                <!--android:gravity="center"-->
                <!--android:textColor="@color/white"/>-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:background="@color/green"-->
            <!--android:gravity="center"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="100dp">-->

            <!--<ImageView-->
                <!--android:layout_width="24dp"-->
                <!--android:layout_height="24dp"-->
                <!--android:src="@drawable/ic_phone_black_24dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:contentDescription="@string/phone_icon" />-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/about_number"-->
                <!--android:textSize="14sp"-->
                <!--android:textColor="@color/white"/>-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:background="@color/bluelight"-->
            <!--android:gravity="center"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="100dp">-->

            <!--<ImageView-->
                <!--android:layout_width="24dp"-->
                <!--android:layout_height="24dp"-->
                <!--android:src="@drawable/ic_dialer_sip_black_24dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:contentDescription="@string/skype_icon" />-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/about_skype"-->
                <!--android:textSize="14sp"-->
                <!--android:textColor="@color/white"/>-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->

    <!--<TextView-->
        <!--android:id="@+id/btnfollow"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/about_profile"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textColor="@color/white"/>-->

<!--</LinearLayout>-->